apps/web/k8s/prod/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "diligence-kit-web-service"
  namespace: "prod"
  annotations:
    cloud.google.com/backend-config: '{"default": "diligence-kit-web-backend-config"}'
spec:
  type: NodePort
  selector:
    app: "diligence-kit-web"
  ports:
  - port: 3000
    targetPort: 3000
