apps/web/k8s/prod/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "diligence-kit-web-ingress"
  namespace: "prod"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: diligence-kit-web-prod-ip
    networking.gke.io/managed-certificates: diligence-kit-web-certificate
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: "diligence-kit-web-service"
      port:
        number: 3000
